Adding an employee table...

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,6 +1,8 @@
 @import '../../node_modules/skeleton-css/css/normalize.css'
 @import '../../node_modules/skeleton-css/css/skeleton.css'
 
+@import './components/*'
+
 nav ul
   list-style-type none
   margin 0
