updated package.json; fixed employee table

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -3,6 +3,7 @@
 
 @import './components/*'
 
+// Nav style
 nav ul
   list-style-type none
   margin 0
@@ -26,3 +27,12 @@ nav li a:hover
 
 nav li .active
   background-color #4CAF50
+
+// Employee table style
+.employeeTable
+  width 360px
+  height 360px
+  overflow-y auto
+
+.employeeTable table
+  width 100%
