BadgeNetwork fix, NetGraph recolor, re arrangement of stuff, other stuf I can't think of

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -9,7 +9,7 @@ nav ul
   margin 0
   padding 0
   overflow hidden
-  background-color steelblue
+  background-color #4292c6
 
 nav li
   float left
@@ -32,15 +32,6 @@ nav li a.active
 // Override skeleton container size
 .container
   max-width 80%
-
-// Employee table style
-.employeeTable
-  width 360px
-  height 360px
-  overflow-y auto
-
-.employeeTable table
-  width 100%
 
 // IP table style
 .ipTable table
