Various bug fixes and additions

--- a/src/styles/components/badgeNetwork.styl
+++ b/src/styles/components/badgeNetwork.styl
@@ -1,8 +1,12 @@
 .badgeNetworkInput
   display inline-block
+  vertical-align middle
 
 .badgeNetworkInput span
   font-weight bold
-
-.badgeNetworkInput span
+  vertical-align middle
   margin-bottom 0
+
+.badgeNetworkInput input
+  vertical-align middle
+  margin 0 auto
