A lot changed. . . redis now wired up to store events, added pages to set up study, added socket info

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -3,7 +3,15 @@
 
 @import './components/*'
 
+// Override skeleton font
+body
+  font-family Roboto
+
 // Nav style
+// Hide navbar
+// nav
+  // display none
+
 nav ul
   list-style-type none
   margin 0
