--- a/src/styles/components/badgeNetwork.styl
+++ b/src/styles/components/badgeNetwork.styl
@@ -10,3 +10,20 @@
 .badgeNetworkInput input
   vertical-align middle
   margin 0 auto
+
+.badgeNetworkKey .square
+  display inline-block
+  border 1px dashed black
+  position relative
+  margin 0 2px
+  height 22px
+  width 22px
+
+.badgeNetworkKey .label
+  display inline-block
+  position relative
+  margin 0 2px
+  top -7px
+
+.offices .office
+  cursor pointer
