Changes to info displayed, removed timer, changed badge network colors

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -71,6 +71,13 @@ nav li a.active
   display inline-block
   text-align center
 
+p
+  margin-bottom 0
+
+dl
+  margin-top 0
+  margin-bottom 0
+
 dt
   float left
   clear left
