Modified grid view layout

--- a/src/styles/components/badgeNetwork.styl
+++ b/src/styles/components/badgeNetwork.styl
@@ -25,5 +25,10 @@
   margin 0 2px
   top -7px
 
+.badgeNetworkClearInput
+  display inline-block
+  float right
+  cursor pointer
+
 .offices .office
   cursor pointer
