--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -48,6 +48,23 @@ nav li a.active
 // IP table style
 .ipTable table
   width 100%
+  -webkit-touch-callout none /* iOS Safari */
+  -webkit-user-select none /* Chrome/Safari/Opera */
+  -khtml-user-select none /* Konqueror */
+  -moz-user-select none /* Firefox */
+  -ms-user-select none /* Internet Explorer/Edge */
+  user-select none /* Non-prefixed version, currently not supported by any browser */
+
+
+#ipTableToggleSelected
+  margin-top 5px
+
+#ipTableToggleSelected input
+  margin-bottom 0
+
+.ipTable th
+  padding-top 0
+  margin-top 0
 
 .ipTable th span
   cursor pointer
@@ -55,8 +72,11 @@ nav li a.active
 .ipTable td
   padding 1px 3px
 
+.ipTable tr.selected
+  background-color #FFAEAE
+
 .ipTable td.AccessTime:hover
-  background-color #FFFBCC
+  background-color #FFF0AA
   cursor pointer
 
 .ipTable .prevBtn
