fixed paging err, fixed detail histogram bottom axis

--- a/src/styles/components/badgeNetwork.styl
+++ b/src/styles/components/badgeNetwork.styl
@@ -25,7 +25,7 @@
   margin 0 2px
   top -7px
 
-.badgeNetworkClearInput
+.badgeNetworkClear
   display inline-block
   float right
   cursor pointer
